@@ -1,3 +1,7 @@
+249
+
+-  Fix failure when system properties modified when loading configuration
+
 248
 
 - Update Jetty to 12.0.9
